--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "project-name-generator": "^2.1.7",
     "request": "^2.88.0",
     "request-promise": "^4.2.5"
   }
