--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
   },
   "homepage": "https://github.com/hivestrung/hack-kings-6.0#readme",
   "dependencies": {
+    "axios": "^0.19.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "form-data": "^3.0.0",
+    "mongodb": "^3.3.5",
+    "mongoose": "^5.7.13",
     "project-name-generator": "^2.1.7",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
-    "axios": "^0.19.0",
-    "form-data": "^3.0.0"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
