--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index",
-    "start:dev": "nodemon index",
-    "now-build": "npm run build && mv build dist"
+    "start:dev": "nodemon index"
   },
   "repository": {
     "type": "git",
